# jit-compiler-brainfuck

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  build.zig  flake.nix  rustfmt.toml
examples/: hello-world.bf
src/: error.rs  ir.cppm  ir.hpp  lexer.cppm  lexer.hpp  main.cpp  main.rs  utils.cppm  utils.hpp
src/interpreter/: mod.rs
src/ir/: mod.rs
src/lexer/: mod.rs  token.rs
